force-app/main/default/objects/Sale__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>