force-app/main/default/objects/Sale__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biscuits</fullName>
            </value>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>bikes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>